src/test/ui/proc-macro/load-panic-backtrace.stderr
at 'panic-derive', $DIR/auxiliary/test-macros.rs:43:5
error: proc-macro derive panicked
  --> $DIR/load-panic-backtrace.rs:20:10
   |
LL | #[derive(Panic)]
   |          ^^^^^
   |
   = help: message: panic-derive

error: aborting due to previous error

